--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
             height: 100dvh;
             width: 100dvw;
             padding: 0;
-            background: pink;
+/*             background: pink; */
         }
         
         .header{
